@@ -17,6 +17,8 @@ PHP                                                                        NEWS
 - FPM:
   . Fixed bug GH-10461 (PHP-FPM segfault due to after free usage of
     child->ev_std(out|err)). (Jakub Zelenka)
+  . Fixed bug #64539 (FPM status page: query_string not properly JSON encoded).
+    (Jakub Zelenka)
 
 - Hash:
   . Fixed bug GH-11180 (hash_file() appears to be restricted to 3 arguments).
